# Project_classifieur

./: Makefile  README.md  q  resultCSV
doc/: Lucas_Notes.txt  PresentationProjetCpp.docx  UML.drawio
doc/Digits/: digits_copy.svm  readme.txt  testingData.svm  trainingData.svm
doc/Digits/Digits/: digits.svm
doc/output/: log.txt
include/: Application.h  ClassificationReport.h  Data.h  FeatureVector.h  Knn.h  KnnEuclidien.h  KnnManhattan.h  Knncosine.h  Sample.h
poo/poo/: poo.vcxproj  poo.vcxproj.filters
src/: Application.cpp  CMakeLists.txt  ClassificationReport.cpp  Classifieur  Classifieur.cpp  Data.cpp  FeatureVector.cpp  Knn.cpp  KnnEuclidien.cpp  KnnManhattan.cpp  Knncosine.cpp  Sample.cpp  main.cpp  poo.vcxproj
src/Classifieur/: Application.cpp  CMakeLists.txt  ClassificationReport.cpp  ClassificationReport.h  Classifieur  Classifieur.cpp  Classifieur.h  Data.cpp  Data.h  FeatureVector.cpp  FeatureVector.h  Knn.cpp  Knn.h  KnnEuclidien.cpp  KnnEuclidien.h  KnnManhattan.cpp  KnnManhattan.h  Knncosine.cpp  Knncosine.h  Sample  Sample.cpp  Sample.h
